[package]
name = "rskit"
version = "0.0.18"
edition = "2021"
license = "MIT"
description="rust kit"
documentation = "https://docs.rs/rskit"
repository = "https://github.com/itooling/rskit"


[features]
default = []
ecdh = ["p256"]


[dependencies]
log = "0.4.21"
fast_log = "1.7.3"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
base64 = "0.22.1"
bincode = "1.3.3"
hex = "0.4.3"
hex-literal="0.4.0"
cbc = { version = "0.1.2", features = ["std"] }
aes = "0.8.4"
md5 = "0.7.0"
p256 = { version = "0.13.2", features = ["ecdh"], optional = true }
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["json"] }
sqlx = { version = "0.8.0", features = ["chrono", "macros", "runtime-tokio", "sqlite"] }
tokio = { version = "1.39.2", features = ["full"] }
redis = "0.26.1"
config = "0.14.0"
rsa = { version = "0.9.6", features = ["serde", "sha2"] }
